Adds tedx portfolio item

--- a/src/app/modules/about/components/about/about.component.html
+++ b/src/app/modules/about/components/about/about.component.html
@@ -6,19 +6,20 @@
                     <p>Well hello! I am Corina.</p>
                     <p>I am a graphic designer &amp; illustrator. <br/>
                         I’ve had experience in web &amp; app design, as well <br/>
-                        as graphic event design for cool events like TEDx. <br/>
-                        Totally in love with good typography, japanese poster design &<br/>
+                        as graphic event design for cool events like TEDx Chisinau & other smaller projects.
+                        Totally in love with good typography, Japanese poster design &<br/>
                         quircky layouts. Currently based in Berlin with my loving <br/>
                         partner in “crime” & a sweet feline.
                     </p>
                     <p>
-                        Scroll down below to read more about me, but if you want it more by the book - download my resume <a href="/assets/cv-catundercover.pdf" target="_blank" class="emphasis no-decoration">here</a>.
+                        Scroll down below to read my story, but if you want it more "by the book" - download my resume <a href="/assets/cv-catundercover.pdf" target="_blank" class="emphasis no-decoration">here</a>.
                     </p>
-                    <p>Have you seen my <a [routerLink]="['/work']" class="emphasis no-decoration">works</a> yet?</p>
                     <br/>
                     <p class="sansSerifFont" style="letter-spacing:1px;">
                         <span class="uppercase bolder" style="font-size: 12px;">Let’s get the party started</span>:
-                        <span class="emphasis bolder" style="font-size: 14px;">findcatundercover@gmail.com</span>
+                        <span>
+                            <a href="mailto:findcatundercover@gmail.com?subject=Looking for catundercover" class="emphasis bolder" style="font-size: 14px; text-decoration: none;">findcatundercover@gmail.com</a>
+                        </span>
                     </p>
                 </div>
                 <div class="picture">
@@ -28,9 +29,10 @@
             </div>
             <div class="cv">
                 <div class="cv__block">
+                    <div class="title">How it all started & why graphic design?</div>
                     <div class="content separated">
                         <p>
-                            As long as I could consciously remember myself I would have a pencil anywhere I would go, sketching stuff that would inspire me, or at least stuff that I would find eye-catching. My parents strongly believed in my creative side and agreed I should follow a creative career (or at least do what I loved to do at the moment) so I started with art school besides my regular educational activities. After finiahing art school during my teenage years I continued illustrating using different mediums like watercolor, gouache and oils on paper and other objects in the meantime enrolling in some art courses to help grow my passion for illustration. My hard work has been repaid with different prizes at local and cross country painting and art contests.
+                            As long as I could consciously remember myself I would have a pencil anywhere I would go, sketching stuff that would inspire me, or at least stuff that I would find eye-catching. My parents strongly believed in my creative side and agreed I should follow a creative career (or at least do what I loved to do - paint) so I started with art school besides my regular educational activities. After a course in art school during my teenage years I continued illustrating using different mediums like watercolour, gouache, oils on paper and other objects. I’ve also enrolled in art courses after finishing art school to help sustain my passion for painting and illustration. My hard work has been repaid with different prizes at local and cross country drawing contests.
                         </p>
                     </div>
                 </div>
@@ -43,7 +45,8 @@
                     </div>
                     <div class="content separated">
                         <p>
-                            My love affair with drawing ended briefly when I decided to pursue a technical Bachelors degree after school and enrolled in Computer Science at the State University in my city. My first part-time job as a student was writing travel guides for a company and dreaming of visiting all of those countries I wrote about one day. After finishing university as most of the confused students freshly out of school - I decided to move to sunny Cyprus and continue my copy writing career writing about design and other nerdy subjects for magazines like Designmodo.
+                            My love affair with painting ended briefly when I decided to pursue a technical Bachelors degree after high school and enrolled in Computer Science at the State University in my city. My first part time job as a student was writing and compiling travel guides for an app and dreaming of visiting all those countries I wrote about one day. After finishing university, as most of the confused students freshly out of school - I decided to move to sunny Cyprus and continue my copywriting career writing about design and other nerdy subjects for online magazines like Designmodo.
+                            <br> <br>After a while, realising that islands are not really my thing, I moved back to my home country where I got a job as a technical writer for a Danish web design & development company. Everything went great for a while when I understood that my creative side couldn’t hide and be confused any longer and seeing that web design clicked with me during my work experience as a technical writer I decided to start learning on my own after work and spent time with design books and online magazines. I then decided to take my design book knowledge and cute attempts to design a bit further and apply it in real life by contacting different design agencies in my home city and ended up working for a great digital agency where I was hired as a Junior Web Designer and worked at tons of beautiful projects along with a great team.
                         </p>
                     </div>
                 </div>
@@ -55,7 +58,9 @@
                         <span class="circle blue"></span>
                     </div>
                     <div class="content separated">
-                        <p>I have then decided islands are not my thing and moved back to my home country where I got a job as a technical writer for a Danish web design & development company. Everything went great for a while when I understood that my creative side couldn’t hide and be confused much longer and seeing that web design clicked with me during my work experience as a technical writer I decided to start learning on my own after work and spent time with design books and online magazines. I then decided to take my design book knowledge and cute attempts to design a bit further and apply it in real life by contacting different design agencies in my home city and ended up working for a great agency, where I was hired as a Junior Web Designer and worked at tons of beautiful projects along with a great team and professional web designers.</p>
+                        <p>
+                            I’ve learned a lot so far, working on pixel perfect projects for more than 3 years now, learning something new everyday and eager to improve. My plans for the future are starting to look clear now and finally I have found myself doing the job I love, - hoping that someday I will turn from a consumer to a producer, adding more and more value to my work and to what I deliver to the world outside my own.
+                        </p>
                     </div>
                 </div>
             </div>
