--- a/src/app/modules/about/components/about/about.component.less
+++ b/src/app/modules/about/components/about/about.component.less
@@ -57,7 +57,9 @@
       .cv__block {
         margin-left: auto;
         margin-right: auto;
-        max-width: 600px;
+        max-width: 700px;
+        line-height: 1.5em;
+        text-align: justify;
         &:extend(.sansFont);
 
         .separated {
@@ -70,11 +72,12 @@
           font-size: 13px;
           letter-spacing: 2px;
           text-transform: uppercase;
+          text-align: center;
         }
 
         .separator {
           font-size: 15px;
-
+          text-align: center;
           span.circle {
             margin-left: 5px;
             &:first-child {
