--- a/src/app/modules/portfolio/components/portfolio-item/portfolio-item.component.html
+++ b/src/app/modules/portfolio/components/portfolio-item/portfolio-item.component.html
@@ -21,8 +21,8 @@
                     <div class="row">
                         <div class="title">Type of work</div>
                         <div class="description">
-                            <span *ngFor="let tag of work.tags">
-                                {{tag.title}}
+                            <span *ngFor="let typeOfWork of work.typeOfWork; let isLast = last;">
+                                {{typeOfWork}}<span *ngIf="!isLast">,</span>
                                 &nbsp;
                             </span>
                         </div>
