--- a/src/app/modules/core/components/thoughts/thoughts.component.html
+++ b/src/app/modules/core/components/thoughts/thoughts.component.html
@@ -6,6 +6,6 @@
         <img src="/assets/images/thoughts-illustration-small.png">
     </div>
     <div class="actions">
-        <a routerLink="/">Back to homepage</a>
+        <a routerLink="/">Back to <span class="line-through">HOMEPAGE</span></a>
     </div>
 </div>
